# apple-baseband

./: .gitmodules  README.md  pyproject.toml
apple_baseband/: qualcomm_signature.py  split_mbn.py  stitch_bin.py  unify_trustlet.py
tests/: test_load_signatures.py
tests/fixtures/signatures/: aop.b01  apdp.b01  apps.b01  devcfg.b01  hyp.b01  modem.b01  multi_image.b01  qdsp6sw.b01  restoresbl1.b01  sbl1.b01  tz.b01  xbl_cfg.b01
